[metadata]
name = torlib
version = 0.0.4
author = Noppadol Assavakamhaenghan
author_email = noppadol.assava@gmail.com
description = A utility package that can help in many scenarios :D
long_description = file: README.md
long_description_content_type = text/markdown
url = https://noppadol-assava.github.io/torlib
project_urls =
    Bug Tracker = https://github.com/noppadol-assava/torlib/issues
    Documentation = https://noppadol-assava.github.io/torlib/docs
    Source Code = https://github.com/noppadol-assava/torlib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
    python-dateutil>=2.8.1
    pytz>=2020.1
python_requires = >=3.6

[options.packages.find]
where = src